--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
-    "jest": "^25.1.0",
+    "jest": "^29.0.3",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "ts-jest": "^29.0.0"
   },
   "jest": {
     "preset": "react-native"
